Finalized stepper motor results

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -221,29 +221,6 @@
     "from copy import deepcopy\n",
     "from pandas_utils import fill_nans\n",
     "\n",
-    "def plot_ffts(slice_exp, slice_the, dist):\n",
-    "    fig_f, axs_f = plt.subplots(1, slice_exp.shape[0], squeeze=False, sharey=True)\n",
-    "    fig_f.set_size_inches(2*FIGSIZE, FIGSIZE)\n",
-    "    fig_f.suptitle(f\"FFT of standardized distance slices, at frequency {f:.0f}Hz\")\n",
-    "    for m in range(slice_exp.shape[0]):\n",
-    "        slice_exp_norm = deepcopy(slice_exp[m])\n",
-    "        slice_the_norm = deepcopy(slice_the[m])\n",
-    "        slice_exp_norm -= np.mean(slice_exp_norm)\n",
-    "        slice_the_norm -= np.mean(slice_the_norm)\n",
-    "\n",
-    "        n = max(len(slice_exp_norm), 1000)\n",
-    "        freqs = np.fft.rfftfreq(n, d=dist[1] - dist[0])  # unit: 1/cm\n",
-    "        fft_exp = np.abs(np.fft.rfft(slice_exp_norm, n=n))\n",
-    "        fft_exp /= np.sum(fft_exp)\n",
-    "        fft_theory = np.abs(np.fft.rfft(slice_the_norm, n=n))\n",
-    "        fft_theory /= np.sum(fft_theory)\n",
-    "\n",
-    "        axs_f[0, m].plot(freqs, fft_theory, label=\"theoretical\")\n",
-    "        axs_f[0, m].plot(freqs, fft_exp, label=\"measured\")\n",
-    "        axs_f[0, m].set_title(f\"mic{m}\")\n",
-    "        axs_f[0, m].legend(loc=\"upper right\")\n",
-    "    return fig_f\n",
-    "\n",
     "def plot_slices(slice_exp, slice_the, dist):\n",
     "    fig_f, axs_f = plt.subplots(1, slice_exp.shape[0], squeeze=False, sharey=True)\n",
     "    fig_f.set_size_inches(2*FIGSIZE, FIGSIZE)\n",
@@ -253,13 +230,16 @@
     "        slice_the_norm = deepcopy(slice_the[m])\n",
     "        slice_exp_norm -= np.mean(slice_exp_norm)\n",
     "        slice_the_norm -= np.mean(slice_the_norm)\n",
-    "        #slice_exp_norm /= np.std(slice_exp_norm)\n",
-    "        #slice_the_norm /= np.std(slice_the_norm)\n",
+    "        slice_exp_norm /= np.std(slice_exp_norm)\n",
+    "        slice_the_norm /= np.std(slice_the_norm)\n",
     "        \n",
     "        axs_f[0, m].plot(dist, slice_the_norm, label=\"theoretical\")\n",
     "        axs_f[0, m].plot(dist, slice_exp_norm, label=\"measured\")\n",
     "        axs_f[0, m].set_title(f\"mic{m}\")\n",
     "        axs_f[0, m].legend(loc=\"upper right\")\n",
+    "        axs_f[0, m].set_xlabel(\"distance [cm]\")\n",
+    "        axs_f[0, m].grid()\n",
+    "    axs_f[0, 0].set_ylabel(\"amplitude\")\n",
     "    return fig_f"
    ]
   },
@@ -270,8 +250,6 @@
    "outputs": [],
    "source": [
     "for i, f in enumerate(df_freq):\n",
-    "    if f < 3000:\n",
-    "        continue\n",
     "        \n",
     "    slice_exp = df_matrix[:, i, :]\n",
     "    if np.any(np.isnan(slice_exp)):\n",
@@ -289,7 +267,8 @@
     "        dist=df_dist,\n",
     "    )\n",
     "    fname = f\"{exp_name}_{motors}\"\n",
-    "    #save_fig(fig_d, f'{plot_dir}/{fname}_distance_slice_{f:.0f}.pdf')"
+    "    if f in [2562, 3375, 4500]: # manually picked this cause it looks good\n",
+    "        save_fig(fig_d, f'{plot_dir}/{fname}_distance_slice_{f:.0f}.pdf')"
    ]
   },
   {
@@ -457,6 +436,7 @@
     "    calib_function_median, freqs = get_calibration_function_median(\n",
     "        exp_name, mic_type, snr=snr, ax=axs[0], motors=motors\n",
     "    )\n",
+    "    axs[0].legend(loc='lower right')\n",
     "    axs[0].set_title(\"calibration-individual\")\n",
     "\n",
     "    calib_function_median_one, freqs = get_calibration_function_median(\n",
@@ -615,7 +595,8 @@
     "\n",
     "use_uniform_prior = False  #True #False\n",
     "\n",
-    "distances_grid_m = np.arange(50) * 1e-2\n",
+    "distances = np.arange(50) \n",
+    "distances_grid_m = distances * 1e-2\n",
     "distance_estimators = {}\n",
     "\n",
     "with progressbar.ProgressBar(max_value=len(df_dist)) as p:\n",
@@ -740,7 +721,7 @@
     "        fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
-    "        #save_fig(fig, fname_here)"
+    "        save_fig(fig, fname_here)"
    ]
   },
   {
@@ -816,8 +797,8 @@
     "            axs_slice[i_mic].set_title(f\"mic{mic_idx}\")\n",
     "        \n",
     "    label_real = f\"real: {distance:.0f}cm\"\n",
-    "    axs_slice[-1].legend(title=label_real, bbox_to_anchor=[1.0, 1.0], loc='upper left')\n",
-    "    axs_algo[-1].legend(title=label_real, bbox_to_anchor=[1.0, 1.0], loc='upper left')\n",
+    "    #axs_slice[-1].legend(title=label_real, bbox_to_anchor=[1.0, 1.0], loc='upper left')\n",
+    "    #axs_algo[-1].legend(title=label_real, bbox_to_anchor=[1.0, 1.0], loc='upper left')\n",
     "    axs_slice[0].set_ylabel('amplitude') \n",
     "    axs_algo[0].set_ylabel('probability') \n",
     "    [ax.set_xlabel('frequency [Hz]') for ax in axs_slice]\n",
@@ -838,11 +819,10 @@
     "    ):\n",
     "        azimuth_deg_here = None if use_uniform_prior else azimuth_deg_here\n",
     "        distances_m, proba = distance_estimator.get_distance_distribution(\n",
-    "            azimuth_deg=azimuth_deg_here, distances_m=distances_m, verbose=False\n",
+    "            azimuth_deg=azimuth_deg_here, distances_m=distances_grid_m, verbose=False\n",
     "        )\n",
-    "        distances_cm = distances_m * 1e2\n",
     "        ax_combi.plot(\n",
-    "            distances_cm,\n",
+    "            distances,\n",
     "            eps_normalize(proba, eps=eps),\n",
     "            color=f\"C{i_method}\",\n",
     "            ls=all_linestyles[i_method],\n",
@@ -850,8 +830,8 @@
     "        )\n",
     "    ax_combi.axvline(x=distance, color=\"black\", ls=\":\")\n",
     "    ax_combi.set_xlabel(\"distance [cm]\")\n",
-    "    ax_combi.set_ylabel(\"probability [-]\")\n",
-    "    ax_combi.set_title(\"total probability\")\n",
+    "    ax_combi.set_ylabel(\"probability\")\n",
+    "    #ax_combi.set_title(\"total probability\")\n",
     "    ax_combi.set_yscale(\"log\")\n",
     "\n",
     "    print(\"getting angle distribution...\")\n",
@@ -878,7 +858,7 @@
     "    )\n",
     "    ax_combi.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
     "    ax_combi.set_xlabel(\"angle [$^\\\\circ$]\")\n",
-    "    ax_combi.set_title(\"total probability\")\n",
+    "    #ax_combi.set_title(\"total probability\")\n",
     "    ax_combi.set_yscale(\"log\")\n",
     "    plt.subplots_adjust(wspace=0.25)\n",
     "\n",
