Recover linear datasets

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -85,13 +85,14 @@
    "outputs": [],
    "source": [
     "exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
-    "\n",
-    "#exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
-    "# motors = \"sweep_and_move\" #0 #\"all45000\"\n",
-    "\n",
-    "mic_type = \"audio_deck\"\n",
     "motors = \"all45000\"\n",
-    "snr = 5"
+    "mic_type = \"audio_deck\"\n",
+    "snr = 5\n",
+    "\n",
+    "exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
+    "motors = \"sweep_and_move\" #0 #\"all45000\"\n",
+    "mic_type = \"audio_deck\"\n",
+    "snr = 0"
    ]
   },
   {
@@ -310,6 +311,11 @@
     "from plotting_tools import plot_performance, save_fig, titles, linestyles\n",
     "from estimators import get_estimate, AngleEstimator\n",
     "\n",
+    "if PLATFORM == \"epuck\":\n",
+    "     mics_left_right = [[1], [0]]\n",
+    "else:\n",
+    "     mics_left_right = [[1, 2], [0, 3]]\n",
+    "\n",
     "plot_slices = True\n",
     "gamma_min = 10\n",
     "\n",
@@ -386,12 +392,12 @@
     "        axs[1].set_ylabel('probability')\n",
     "        axs[1].legend()\n",
     "\n",
-    "    angles, prob = estimator.get_angle_distribution(mics_left_right=[[1, 2], [0, 3]])\n",
+    "    angles, prob = estimator.get_angle_distribution(mics_left_right=mics_left_right)\n",
     "    \n",
     "    gamma = get_estimate(angles, prob)\n",
     "    err_dict[\"all mics\"][i] = gamma - gt_gamma\n",
     "\n",
-    "angles, prob = estimator_all.get_angle_distribution(mics_left_right=[[1, 2], [0, 3]])\n",
+    "angles, prob = estimator_all.get_angle_distribution(mics_left_right=mics_left_right)\n",
     "ax_total.plot(angles, prob, label=algo)\n",
     "\n",
     "fname = f\"{exp_name}_{motors}\"\n",
@@ -430,7 +436,12 @@
     "from calibration import get_calibration_function_fit\n",
     "from calibration import get_calibration_function_median\n",
     "\n",
-    "for motors in [0, \"all45000\"]:\n",
+    "if PLATFORM == \"epuck\":\n",
+    "    motors_list = [\"sweep_and_move\"]\n",
+    "else:\n",
+    "    motors_list = [0, \"all45000\"]\n",
+    "\n",
+    "for motors in motors_list:\n",
     "    fig, axs = plt.subplots(1, 2, sharey=True)\n",
     "    fig.set_size_inches(10, 5)\n",
     "    calib_function_median, freqs = get_calibration_function_median(\n",
@@ -595,7 +606,12 @@
     "\n",
     "use_uniform_prior = False  #True #False\n",
     "\n",
-    "distances = np.arange(50) \n",
+    "# TODO(FD) need to see if we can remove if/else here\n",
+    "if PLATFORM == \"epuck\":\n",
+    "    distances = df_dist #np.arange(50) \n",
+    "else:\n",
+    "    distances = np.arange(50) \n",
+    "    \n",
     "distances_grid_m = distances * 1e-2\n",
     "distance_estimators = {}\n",
     "\n",
@@ -701,7 +717,8 @@
     "        axs[1].set_xlim(-1, max(distances))\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
-    "        save_fig(fig, fname_here)"
+    "        save_fig(fig, fname_here)\n",
+    "absolute_err"
    ]
   },
   {
@@ -737,11 +754,18 @@
     "mic_idx = 1\n",
     "eps = 1e-5\n",
     "\n",
-    "plot_combis = [\n",
-    "    {\"distance\": 15, \"algorithm\": \"bayes\"},\n",
-    "    {\"distance\": 17, \"algorithm\": \"bayes\"},\n",
-    "    {\"distance\": 28, \"algorithm\": \"bayes\"},\n",
-    "]\n",
+    "if PLATFORM == \"epuck\":\n",
+    "    plot_combis = [\n",
+    "        {\"distance\": 25, \"algorithm\": \"bayes\"},\n",
+    "        {\"distance\": 55, \"algorithm\": \"bayes\"},\n",
+    "    ]\n",
+    "    \n",
+    "else:\n",
+    "    plot_combis = [\n",
+    "        {\"distance\": 15, \"algorithm\": \"bayes\"},\n",
+    "        {\"distance\": 17, \"algorithm\": \"bayes\"},\n",
+    "        {\"distance\": 28, \"algorithm\": \"bayes\"},\n",
+    "    ]\n",
     "\n",
     "for plot_combi in plot_combis:\n",
     "    distance = plot_combi.get(\"distance\")\n",
