--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -23,7 +23,9 @@
     "\n",
     "from matplotlib import rcParams\n",
     "\n",
-    "rcParams[\"figure.max_open_warning\"] = False"
+    "rcParams[\"figure.max_open_warning\"] = False\n",
+    "rcParams[\"font.family\"] = 'DejaVu Sans'\n",
+    "rcParams[\"font.size\"] = 12"
    ]
   },
   {
@@ -39,18 +41,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exp_name = \"2021_07_08_stepper_fast\";  # new hardware, new sweep\n",
+    "exp_name = \"2021_07_08_stepper_fast\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_07_08_stepper_slow\";  # new hardware, new sweep\n",
-    "exp_name = \"2021_07_27_epuck_wall\";  # new hardware, new sweep\n",
+    "#exp_name = \"2021_07_27_epuck_wall\";  # new hardware, new sweep\n",
     "# new buzzer\n",
     "\n",
-    "#motors = \"all45000\"\n",
-    "bin_selection = 5\n",
+    "motors = \"all45000\"\n",
+    "bin_selection = 6\n",
+    "\n",
+    "#motors = \"sweep_and_move\" \n",
+    "#bin_selection = 0\n",
     "\n",
     "mic_type = \"audio_deck\" \n",
-    "motors = \"sweep_and_move\" \n",
-    "bin_selection = 0\n",
-    "\n",
     "source = \"sweep_new\"\n",
     "fname = f'plots/experiments/{exp_name}_{motors}_{bin_selection}'"
    ]
@@ -310,15 +312,16 @@
     "matrix_pruned, freqs_pruned, *_ = prune_df_matrix(matrix_cleaned, freqs_cleaned, ratio_missing_allowed=0.5)\n",
     "\n",
     "def plot_matrices(dists, freqs, matrix):\n",
-    "    fig, axs = plt.subplots(1, matrix.shape[0])\n",
-    "    fig.set_size_inches(5 * matrix.shape[0], 5)\n",
+    "    fig, axs = plt.subplots(1, matrix.shape[0], sharey=True)\n",
+    "    fig.set_size_inches(3 * matrix.shape[0], 3)\n",
     "    for i in range(matrix.shape[0]):\n",
     "        plot_df_matrix(dists, freqs[freqs>0], matrix[i, freqs>0], ax=axs[i])\n",
     "        axs[i].set_title(f\"mic{i}\")\n",
+    "        axs[i].set_ylim(2500, 4500)\n",
     "    return fig, axs\n",
     "\n",
     "fig, axs = plot_matrices(dists, freqs, matrix)\n",
-    "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
+    "axs[0].set_ylabel('raw matrix\\n frequency [Hz]')\n",
     "save_fig(fig, f'{fname}_raw_matrix.png')\n",
     "\n",
     "fig, axs = plot_matrices(dists_cleaned, freqs_cleaned, matrix_cleaned)\n",
@@ -326,8 +329,7 @@
     "save_fig(fig, f'{fname}_cleaned_matrix.png')\n",
     "\n",
     "fig, axs = plot_matrices(dists_cleaned, freqs_pruned, matrix_pruned)\n",
-    "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
-    "\n",
+    "axs[0].set_ylabel('pruned matrix\\n frequency [Hz]')\n",
     "save_fig(fig, f'{fname}_pruned_matrix.png')"
    ]
   },
@@ -365,27 +367,6 @@
     "plt.legend()\n",
     "pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
