Clean window plots

--- a/python/WindowAnalysis.ipynb
+++ b/python/WindowAnalysis.ipynb
@@ -23,7 +23,9 @@
     "\n",
     "from matplotlib import rcParams\n",
     "\n",
-    "rcParams[\"figure.max_open_warning\"] = False"
+    "rcParams[\"figure.max_open_warning\"] = False\n",
+    "rcParams[\"font.family\"] = 'DejaVu Sans'\n",
+    "rcParams[\"font.size\"] = 12"
    ]
   },
   {
@@ -47,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exp_name = '2021_02_19_windows';\n",
-    "exp_name = '2021_06_09_stepper';\n",
+    "exp_name = '2021_02_19_windows';\n",
+    "#exp_name = '2021_06_09_stepper';\n",
     "fname = f\"../experiments/{exp_name}/all_data.pkl\"\n",
     "\n",
     "try:\n",
@@ -116,11 +118,10 @@
     "        fig_raw.set_size_inches(5, 5)\n",
     "        ax.set_ylim(ymin, ymax)\n",
     "        ax.set_xlim(2000, 3500)\n",
-    "        ax.set_title(label)\n",
+    "        #ax.set_title(label)\n",
     "        save_fig(\n",
-    "            fig_raw, f\"plots/{exp_name}_{row.motors}{row.appendix}_raw.png\", extension=\"png\"\n",
-    "        )\n",
-    "        break"
+    "            fig_raw, f\"plots/experiments/{exp_name}_{row.motors}{row.appendix}_raw.png\", extension=\"pdf\"\n",
+    "        )"
    ]
   },
   {
