Try to recover epuck results

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -435,11 +435,13 @@
    "source": [
     "from calibration import get_calibration_function_fit\n",
     "from calibration import get_calibration_function_median\n",
+    "from constants import PLATFORM\n",
     "\n",
     "if PLATFORM == \"epuck\":\n",
     "    motors_list = [\"sweep_and_move\"]\n",
     "else:\n",
     "    motors_list = [0, \"all45000\"]\n",
+    "    snr = 0\n",
     "\n",
     "for motors in motors_list:\n",
     "    fig, axs = plt.subplots(1, 2, sharey=True)\n",
@@ -601,16 +603,18 @@
     "\n",
     "inf_machine.add_geometry(distance_range, azimuth_deg)\n",
     "\n",
-    "chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
-    "n_mics = len(chosen_mics)\n",
-    "\n",
-    "use_uniform_prior = False  #True #False\n",
+    "use_uniform_prior = False\n",
     "\n",
     "# TODO(FD) need to see if we can remove if/else here\n",
     "if PLATFORM == \"epuck\":\n",
     "    distances = df_dist #np.arange(50) \n",
+    "    chosen_mics = [0, 1, 3] #range(4)\n",
     "else:\n",
     "    distances = np.arange(50) \n",
+    "    chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
+    "    \n",
+    "n_mics = len(chosen_mics)\n",
+    "\n",
     "    \n",
     "distances_grid_m = distances * 1e-2\n",
     "distance_estimators = {}\n",
@@ -713,12 +717,11 @@
     "        absolute_err = pd.pivot_table(df_mic, index=\"distance\", values=\"error\", columns=\"method\")\n",
     "        fig, axs = plot_performance(absolute_err, xs=distances, xlabel=\"distance [cm]\", ylabel=\"error [cm]\")\n",
     "        axs[0].grid()\n",
-    "        fig.suptitle(f'microphone: {mic}') #', {titles[key]}')\n",
+    "        #fig.suptitle(f'microphone: {mic}') #', {titles[key]}')\n",
     "        axs[1].set_xlim(-1, max(distances))\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
-    "        save_fig(fig, fname_here)\n",
-    "absolute_err"
+    "        save_fig(fig, fname_here)"
    ]
   },
   {
@@ -735,7 +738,7 @@
     "        fig, axs = plot_performance(absolute_err, \n",
     "                                    xs=distances, xlabel=\"distance [cm]\", ylabel=\"error [deg]\")\n",
     "        axs[0].grid()\n",
-    "        fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
+    "        #fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
     "        save_fig(fig, fname_here)"
