Try to recover stepper results

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -89,10 +89,10 @@
     "mic_type = \"audio_deck\"\n",
     "snr = 5\n",
     "\n",
-    "exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
-    "motors = \"sweep_and_move\" #0 #\"all45000\"\n",
-    "mic_type = \"audio_deck\"\n",
-    "snr = 0"
+    "#exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
+    "#motors = \"sweep_and_move\" #0 #\"all45000\"\n",
+    "#mic_type = \"audio_deck\"\n",
+    "#snr = 0"
    ]
   },
   {
@@ -439,9 +439,10 @@
     "\n",
     "if PLATFORM == \"epuck\":\n",
     "    motors_list = [\"sweep_and_move\"]\n",
+    "    snr = 0\n",
     "else:\n",
     "    motors_list = [0, \"all45000\"]\n",
-    "    snr = 0\n",
+    "    snr = 5\n",
     "\n",
     "for motors in motors_list:\n",
     "    fig, axs = plt.subplots(1, 2, sharey=True)\n",
@@ -603,14 +604,14 @@
     "\n",
     "inf_machine.add_geometry(distance_range, azimuth_deg)\n",
     "\n",
-    "use_uniform_prior = False\n",
+    "use_uniform_prior = True\n",
     "\n",
     "# TODO(FD) need to see if we can remove if/else here\n",
     "if PLATFORM == \"epuck\":\n",
     "    distances = df_dist #np.arange(50) \n",
     "    chosen_mics = [0, 1, 3] #range(4)\n",
     "else:\n",
-    "    distances = np.arange(50) \n",
+    "    distances = df_dist #np.arange(50) \n",
     "    chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
     "    \n",
     "n_mics = len(chosen_mics)\n",
@@ -683,6 +684,8 @@
     "                distance_estimate_m=distance_m_here,\n",
     "                azimuths_deg=np.arange(360))\n",
     "            a = get_estimate(angles_here, proba)\n",
+    "            plt.figure()\n",
+    "            plt.plot(angles_here, proba)\n",
     "            error = np.diff(\n",
     "                np.unwrap([a / 180 * np.pi, azimuth_deg / 180 * np.pi\n",
     "                           ])) * 180 / np.pi\n",
