Recover epuck and stepper results

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -84,14 +84,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
+    "if PLATFORM == \"crazyflie\":\n",
+    "    exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
+    "    motors = \"all45000\"\n",
+    "    snr = 5\n",
+    "else:\n",
     "\n",
-    "#exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
-    "# motors = \"sweep_and_move\" #0 #\"all45000\"\n",
-    "\n",
-    "mic_type = \"audio_deck\"\n",
-    "motors = \"all45000\"\n",
-    "snr = 5"
+    "    exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
+    "    motors = \"sweep_and_move\" \n",
+    "    snr = 0\n",
+    "mic_type = \"audio_deck\""
    ]
   },
   {
@@ -430,7 +432,13 @@
     "from calibration import get_calibration_function_fit\n",
     "from calibration import get_calibration_function_median\n",
     "\n",
-    "for motors in [0, \"all45000\"]:\n",
+    "\n",
+    "if PLATFORM == \"epuck\":\n",
+    "    motors_list = [\"sweep_and_move\"]\n",
+    "else:\n",
+    "    motors_list = [\"all45000\", 0]\n",
+    "\n",
+    "for motors in motors_list:\n",
     "    fig, axs = plt.subplots(1, 2, sharey=True)\n",
     "    fig.set_size_inches(10, 5)\n",
     "    calib_function_median, freqs = get_calibration_function_median(\n",
@@ -456,6 +464,7 @@
    "source": [
     "from simulation import get_df_theory\n",
     "from data_collector import normalize_df_matrix\n",
+    "\n",
     "\n",
     "results = pd.DataFrame(columns=[\"normalization\", \"matrix\", \"values\"])\n",
     "method_dict = {\n",
@@ -593,11 +602,14 @@
     "chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
     "n_mics = len(chosen_mics)\n",
     "\n",
-    "use_uniform_prior = False  #True #False\n",
+    "use_uniform_prior = False\n",
     "\n",
-    "distances = np.arange(50) \n",
+    "context = Context.get_platform_setup()\n",
+    "distances = context.get_possible_distances() * 1e2 #np.arange(50) \n",
     "distances_grid_m = distances * 1e-2\n",
     "distance_estimators = {}\n",
+    "\n",
+    "print(df_dist)\n",
     "\n",
     "with progressbar.ProgressBar(max_value=len(df_dist)) as p:\n",
     "    for i_d, distance in enumerate(df_dist):\n",
@@ -657,7 +669,10 @@
     "                'algorithm': 'bayes-combination'\n",
     "            }\n",
     "\n",
-    "            distance_m_here = None if use_uniform_prior else distance * 1e-2\n",
+    "            \n",
+    "            # angle distribution doesn't work with uniform prior!\n",
+    "            # this is normal, there is no information on angle without some distance information.\n",
+    "            distance_m_here = d * 1e-2\n",
     "            angles_here, proba = distance_estimator.get_angle_distribution(\n",
     "                method='sum',\n",
     "                distance_estimate_m=distance_m_here,\n",
@@ -695,9 +710,12 @@
     "        continue\n",
     "    for mic, df_mic in df.groupby(\"mic\"):\n",
     "        absolute_err = pd.pivot_table(df_mic, index=\"distance\", values=\"error\", columns=\"method\")\n",
-    "        fig, axs = plot_performance(absolute_err, xs=distances, xlabel=\"distance [cm]\", ylabel=\"error [cm]\")\n",
+    "        \n",
+    "        # TODO: need to figure out if we need to replace df_dist below by distance again.\n",
+    "        # that's what it was for stepper motor results\n",
+    "        fig, axs = plot_performance(absolute_err, xs=df_dist, xlabel=\"distance [cm]\", ylabel=\"error [cm]\")\n",
     "        axs[0].grid()\n",
-    "        fig.suptitle(f'microphone: {mic}') #', {titles[key]}')\n",
+    "        #fig.suptitle(f'microphone: {mic}') #', {titles[key]}')\n",
     "        axs[1].set_xlim(-1, max(distances))\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
@@ -715,10 +733,13 @@
     "        continue\n",
     "    for mic, df_mic in df.groupby(\"mic\"):\n",
     "        absolute_err = pd.pivot_table(df_mic, index=\"distance\", values=\"error\", columns=\"method\")\n",
+    "        \n",
+    "        # TODO: need to figure out if we need to replace df_dist below by distance again.\n",
+    "        # that's what it was for stepper motor results\n",
     "        fig, axs = plot_performance(absolute_err, \n",
-    "                                    xs=distances, xlabel=\"distance [cm]\", ylabel=\"error [deg]\")\n",
+    "                                    xs=df_dist, xlabel=\"distance [cm]\", ylabel=\"error [deg]\")\n",
     "        axs[0].grid()\n",
-    "        fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
+    "        #fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
     "        save_fig(fig, fname_here)"
