Generate smoother plots

--- a/python/DynamicStudy.ipynb
+++ b/python/DynamicStudy.ipynb
@@ -1180,11 +1180,24 @@
     "        im = pcolorfast_custom(ax, np.arange(len(noises)), tb_mean.index.values, values, vmax=vmax)\n",
     "        add_colorbar(fig, ax, im)\n",
     "        \n",
+    "        yticks = tb_mean.index.values\n",
+    "        yticks_rounded = np.unique(yticks // 1000 * 1000)\n",
+    "        ax.set_yticks(yticks_rounded + (yticks[1]-yticks[0])/2)\n",
+    "        ax.set_yticklabels(yticks_rounded)\n",
+    "        \n",
     "        if max(noises) <= 1.0:\n",
-    "            ax.set_xticklabels(np.round(np.log10(noises), 1))\n",
+    "            if len(noises) > 10:\n",
+    "                ax.set_xticks(np.arange(len(noises), step=2)+0.5)\n",
+    "                ax.set_xticklabels(np.round(np.log10(noises), 1)[::2])\n",
+    "            else:\n",
+    "                ax.set_xticklabels(np.round(np.log10(noises), 1))\n",
     "            ax.set_xlabel(column.replace(\"_\", \" \") + \" (log)\")\n",
     "        else:\n",
-    "            ax.set_xticklabels(noises)\n",
+    "            if len(noises) > 10:\n",
+    "                ax.set_xticks(np.arange(len(noises), step=2)+0.5)\n",
+    "                ax.set_xticklabels(noises[::2])\n",
+    "            else:\n",
+    "                ax.set_xticklabels(noises)\n",
     "            ax.set_xlabel(column.replace(\"_\", \" \"))\n",
     "        if xlabel is not None:\n",
     "            ax.set_xlabel(xlabel)\n",
@@ -1228,7 +1241,7 @@
    "outputs": [],
    "source": [
     "GT_ANGLE_DEG = [10, 50]\n",
-    "fname = 'results/doa_multi_joint.pkl' # done using angular and linear movement\n",
+    "fname = 'results/doa_multi_joint_highres.pkl' # done using angular and linear movement\n",
     "df = pd.read_pickle(fname)\n",
     "df.frequency = df.frequency.astype(int)\n",
     "for spectrum in [\"spectrum_dynamic\", \"spectrum_delayed\", \"spectrum_multimic\"]:\n",
@@ -1245,6 +1258,7 @@
    "outputs": [],
    "source": [
     "GT_ANGLE_DEG = 50\n",
+    "#fname = 'results/doa_lateral_movement_highres.pkl'\n",
     "fname = 'results/doa_lateral_movement.pkl'\n",
     "new_label = \"delta [cm]\" \n",
     "df = pd.read_pickle(fname)\n",
@@ -1263,8 +1277,8 @@
    "source": [
     "GT_ANGLE_DEG = 130\n",
     "fname = 'results/doa_time_noise.pkl'\n",
-    "fname = 'results/doa_time_noise_higher.pkl'\n",
     "df = pd.read_pickle(fname)\n",
+    "df.frequency = df.frequency.astype(int)\n",
     "plot_pivot_table(df, column=\"time_noise\", saveas=\"time_noise\", xlabel=\"time noise $\\\\sigma_t$ (log) [s]\", log=True, \n",
     "                 title=\"mean of angle error (log) [$^\\\\circ$]\")#90 log=True)"
    ]
