More plot improvements

--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -39,17 +39,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exp_name = \"2021_07_08_stepper_fast\";  # new hardware, new sweep\n",
+    "exp_name = \"2021_07_08_stepper_fast\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_07_08_stepper_slow\";  # new hardware, new sweep\n",
-    "exp_name = \"2021_07_27_epuck_wall\";  # new hardware, new sweep\n",
+    "#exp_name = \"2021_07_27_epuck_wall\";  # new hardware, new sweep\n",
     "# new buzzer\n",
     "\n",
-    "#motors = \"all45000\"\n",
-    "bin_selection = 5\n",
+    "motors = \"all45000\"\n",
+    "bin_selection = 6\n",
     "\n",
-    "mic_type = \"audio_deck\" \n",
-    "motors = \"sweep_and_move\" \n",
-    "bin_selection = 0\n",
+    "#mic_type = \"audio_deck\" \n",
+    "#motors = \"sweep_and_move\" \n",
+    "#bin_selection = 0\n",
     "\n",
     "source = \"sweep_new\"\n",
     "fname = f'plots/experiments/{exp_name}_{motors}_{bin_selection}'"
@@ -318,7 +318,7 @@
     "    return fig, axs\n",
     "\n",
     "fig, axs = plot_matrices(dists, freqs, matrix)\n",
-    "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
+    "axs[0].set_ylabel('raw matrix\\n frequency [Hz]')\n",
     "save_fig(fig, f'{fname}_raw_matrix.png')\n",
     "\n",
     "fig, axs = plot_matrices(dists_cleaned, freqs_cleaned, matrix_cleaned)\n",
@@ -326,8 +326,7 @@
     "save_fig(fig, f'{fname}_cleaned_matrix.png')\n",
     "\n",
     "fig, axs = plot_matrices(dists_cleaned, freqs_pruned, matrix_pruned)\n",
-    "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
-    "\n",
+    "axs[0].set_ylabel('pruned matrix\\n frequency [Hz]')\n",
     "save_fig(fig, f'{fname}_pruned_matrix.png')"
    ]
   },
@@ -365,6 +364,13 @@
     "plt.legend()\n",
     "pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
