--- a/python/FlyingAnalysis.ipynb
+++ b/python/FlyingAnalysis.ipynb
@@ -895,14 +895,18 @@
     "                           positions_corr[:, 1], \n",
     "                           color=f'C{slice_idx}',\n",
     "                           s=10)\n",
+    "            ax_pos.set_title(f'experiment {k}')\n",
     "            \n",
     "            positions_here = positions_corr - positions_corr[0, :]\n",
+    "            \n",
     "            axs_res[slice_idx, k].scatter(positions_here[:, 0], \n",
     "                positions_here[:, 1], \n",
     "                color=f'C{slice_idx}',\n",
     "                s=10, \n",
     "                label=\"trajectory\"\n",
     "            )\n",
+    "            axs_res[0, k].set_title(f'exp. {k}')\n",
+    "            axs_all[0, k].set_title(f'exp. {k}')\n",
     "\n",
     "            if plot_raw:\n",
     "                fig, axs = plt.subplots(2, n_mics, sharey='row')\n",
