--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -104,6 +104,15 @@
     "            snr=5,\n",
     "            fit_one_gain=False,\n",
     "        )\n",
+    "    elif calib == \"stepper_nomotors\":\n",
+    "        print(\"using stepper dataset without motors\")\n",
+    "        calib_function_median, freqs = get_calibration_function_median(\n",
+    "            \"2021_07_08_stepper_fast\",\n",
+    "            motors=0,\n",
+    "            mic_type=\"audio_deck\",\n",
+    "            snr=5,\n",
+    "            fit_one_gain=False,\n",
+    "        )\n",
     "    return calib_function_median"
    ]
   },
@@ -294,15 +303,16 @@
    "source": [
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER, WALL_DISTANCE_CM_STEPPER\n",
     "exp_name = \"2021_07_08_stepper_fast\"\n",
-    "calib = \"stepper\"\n",
+    "calib = \"stepper_nomotors\"\n",
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
     "\n",
-    "distance_nom = 30 #30 #47\n",
+    "#distance_nom = 47\n",
+    "distance_nom = 30\n",
     "stft_list = []\n",
     "freqs_list = []\n",
     "pos_list = []\n",
-    "mics = [0, 1]\n",
+    "mics = [0, 1, 3]\n",
     "start_i = 0 # for naming only\n",
     "n_sweeps_per = 3\n",
     "\n",
@@ -343,6 +353,8 @@
     "\n",
     "exp_name = \"2021_07_27_hover\"; \n",
     "distance = 30\n",
+    "#distance = 50\n",
+    "#calib = \"stepper_nomotors\"\n",
     "calib = \"hover\"\n",
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
@@ -352,20 +364,22 @@
     "print(row)\n",
     "\n",
     "label = f\"hover at {distance}\"\n",
-    "mics = [0, 1]\n",
+    "mics = [0, 1, 3]\n",
     "\n",
     "# choose three sweeps to plot\n",
     "start_i = 3\n",
     "n_sweeps = 10\n",
     "\n",
+    "pos_list = get_positions(row) \n",
+    "\n",
     "#for start_i in np.arange(row.stft.shape[0]-n_sweeps)[::3]:\n",
     "chosen_sweeps = np.arange(start_i, start_i+n_sweeps)\n",
     "stft_list = row.stft[chosen_sweeps]\n",
     "freqs_list = row.frequencies_matrix[chosen_sweeps]\n",
-    "pos_list = get_positions(row, chosen_sweeps) \n",
+    "pos_list = pos_list[chosen_sweeps, :]\n",
     "dist_average = np.mean([p[1] for p in pos_list])\n",
     "\n",
-    "fname = f\"plots/experiments/{exp_name}_by3_distance{distance}\""
+    "fname = f\"plots/experiments/{exp_name}_by3_distance{distance}\"\n"
    ]
   },
   {
@@ -382,8 +396,8 @@
     "\n",
     "\n",
     "cmap = cm.get_cmap(\"inferno\")\n",
-    "distance_range = [0.0, 80.0]\n",
-    "distances = np.arange(100)\n",
+    "distance_range = [0.0, 70.0]\n",
+    "distances = np.arange(*distance_range)\n",
     "\n",
     "calib_function_median = get_calib_function(calib)\n",
     "\n",
@@ -394,7 +408,7 @@
     "#    pos_list = get_positions(row, chosen_sweeps)\n",
     "#    if pos_list is None: # invalid position\n",
     "#        continue\n",
-    "dist_average = np.mean([p[1] for p in pos_list])\n",
+    "dist_average = np.nanmedian([p[1] for p in pos_list])\n",
     "\n",
     "fig_slice, ax_slice = plt.subplots(1, len(mics), sharey=True)\n",
     "fig_slice.set_size_inches(3 * len(mics), 3)\n",
@@ -446,7 +460,7 @@
     "        distance_estimator_all.add_distribution(diff * 1e-2, proba, mic_idx)\n",
     "\n",
     "    dist, proba = distance_estimator.get_distance_distribution(\n",
-    "        method=\"sum\", distances_m=1e-2 * np.arange(*distance_range, step=1.0)\n",
+    "        method=\"sum\", distances_m=1e-2 * distances  \n",
     "    )\n",
     "    ax_total.plot(dist * 1e2,\n",
     "                  proba,\n",
@@ -456,6 +470,7 @@
     "                  label=label,\n",
     "                  alpha=0.5)\n",
     "    label = None\n",
+    "    \n",
     "label = f'probability sweep {i}'\n",
     "ax_total.plot(dist * 1e2,\n",
     "              proba, \n",
@@ -487,7 +502,7 @@
     "\n",
     "dist, proba = distance_estimator_all.get_distance_distribution(\n",
     "    method=\"sum\",\n",
-    "    distances_m=1e-2 * np.arange(*distance_range, step=1.0),\n",
+    "    distances_m=1e-2 * distances,\n",
     "    verbose=False)\n",
     "ax_total.plot(\n",
     "    dist * 1e2,\n",
@@ -497,25 +512,6 @@
     "    ls=\"-\",\n",
     "    label=\"averaged probabilities\",\n",
     ")\n",
-    "\n",
-    "#### Create average of stfts. DOESN'T GIVE GOOD RESULTS\n",
-    "# stft_array = np.array(stft_list)\n",
-    "# stft = np.median(stft_array, axis=0)\n",
-    "#\n",
-    "# inf_machine.add_data(np.abs(stft), freqs)\n",
-    "#\n",
-    "# freqs = freqs_list[0]\n",
-    "# distance_estimator = DistanceEstimator()\n",
-    "# for mic_i, mic_idx in enumerate(mics):\n",
-    "#     amps = np.abs(stft[mic_idx, :])\n",
-    "#     dist, proba, diff = inf_machine.do_inference(\"bayes\", mic_idx)\n",
-    "#     distance_estimator.add_distribution(diff * 1e-2, proba, mic_idx)\n",
-    "# dist, proba = distance_estimator.get_distance_distribution(\n",
-    "#     method=\"sum\", distances_m=1e-2 * np.arange(*distance_range, step=1.0)\n",
-    "# )\n",
-    "# ax_total.plot(\n",
-    "#     dist * 1e2, eps_normalize(proba, 1e-3), color=\"k\", ls=\"--\", label=\"averaged sweeps\"\n",
-    "# )\n",
     "\n",
     "#### Plot decorations\n",
     "ax_prob[0].set_ylabel(\"sweep number\")\n",
@@ -534,6 +530,7 @@
     "\n",
     "ax_total.set_xlabel(\"distance [cm]\")\n",
     "ax_total.set_ylabel(\"probability\")\n",
+    "print(dist_average)\n",
     "ax_total.axvline(dist_average, ls=\":\", color=\"k\", label=\"average distance\")\n",
     "ax_total.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
     "ax_total.grid()\n",
@@ -597,7 +594,8 @@
     "from estimators import DistanceEstimator\n",
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
-    "mics = range(2) #[0, 1, 2, 3]\n",
+    "#mics = [0, 1, 2, 3] # for some reason this works super well for appendix _19!\n",
+    "mics = [0, 1, 3]\n",
     "\n",
     "plot_step = 500\n",
     "\n",
