--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -900,19 +900,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "exp_name = \"2021_04_30_stepper\"\n",
+    "mic_type = \"audio_deck\"\n",
+    "motors = \"all45000\"\n",
+    "snr = 3\n",
+    "plot_tuples = [(0, 2998), (0, 3125), (0, 4485)]\n",
+    "\n",
+    "data_collector = DataCollector()\n",
+    "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr=snr)\n",
+    "if not backup_exists: \n",
+    "    print('generate data using script generate_df_results.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_name = \"2021_07_08_stepper_fast\"\n",
+    "mic_type = \"audio_deck\"\n",
+    "motors = \"all45000\"\n",
+    "snr = 5\n",
+    "plot_tuples = [(0, 3125)]\n",
+    "\n",
+    "data_collector = DataCollector()\n",
+    "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr=snr)\n",
+    "if not backup_exists: \n",
+    "    print('generate data using script generate_df_results.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from calibration import fit_distance_slice\n",
     "from simulation import get_amplitude_function\n",
     "\n",
     "fname = f'{exp_name}_{motors}'\n",
-    "\n",
     "all_distances = data_collector.df.distance.unique()\n",
     "\n",
-    "fitting_results = pd.DataFrame(\n",
-    "    columns=[\"frequency\", \"mic\", \"absorption\", \"gains\", \"offset\", \"method\", \"limit_distance\"]\n",
-    ")\n",
-    "\n",
-    "# found from below: choose interesting tuples (mic, frequency)\n",
-    "plot_tuples = [(0, 2998), (0, 3125)]\n",
+    "mic_idx = 0\n",
+    "max_distance = 35\n",
     "\n",
     "for i, (frequency, df_freq_here) in enumerate(data_collector.df.groupby('frequency')):\n",
     "    \n",
@@ -922,107 +953,58 @@
     "    if len(distances) < len(all_distances): # only plot distances with \"full coverage\"\n",
     "        continue\n",
     "    \n",
+    "    df_here = df_freq_here.loc[df_freq_here.mic==mic_idx]\n",
+    "        \n",
+    "    coeffs_median, distances_median, fit_median, cost_median = data_collector.fit_to_median(frequency, [mic_idx])\n",
+    "    alpha, offset, gain = coeffs_median\n",
+    "        \n",
+    "    # find the sigma for this frequency (per distance)\n",
+    "    std_series = df_here.groupby('distance').magnitude.std() # per distance\n",
+    "    std_average = np.nanmean(std_series.values)\n",
+    "    amps = get_amplitude_function(std_series.index, \n",
+    "                                  gain, \n",
+    "                                  alpha, mic_idx)\n",
+    "    valid_distances = std_series.index[amps >= std_average]\n",
+    "    limit_distance = valid_distances[-1] if len(valid_distances) else 0\n",
+    "\n",
+    "    print(f'raw: mic {mic}, frequency {frequency}')\n",
+    "    print(f'median: alpha={alpha:.2f}, gain={gain:.2f}, offset={offset:.0f}, cost={cost_median}')\n",
+    "\n",
+    "\n",
+    "    label = f\"{frequency:.0f}Hz\"\n",
+    "    fig, axs = plt.subplots(1, 2)\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    ax_fit, ax_freq = axs\n",
+    "    \n",
     "    slices_median, distances_median_all, mics, stds = data_collector.get_distance_slice(frequency)\n",
-    "    \n",
-    "    # TODO: these don't make sense because they model the full oscillation\n",
-    "    #print('stds:', stds)\n",
-    "    \n",
-    "    # global\n",
-    "    coeffs_raw_glob, *_ =  data_collector.fit_to_raw(frequency)\n",
-    "    coeffs_median_glob, *_ =  data_collector.fit_to_median(frequency)\n",
-    "    \n",
-    "    fitting_results.loc[len(fitting_results), :] = dict(\n",
-    "        frequency=frequency,\n",
-    "        mic=-1,\n",
-    "        absorption=coeffs_raw_glob[0],\n",
-    "        offset=coeffs_raw_glob[1],\n",
-    "        gains=coeffs_raw_glob[2],\n",
-    "        method=\"one-shot raw\",\n",
-    "    )\n",
-    "    fitting_results.loc[len(fitting_results), :] = dict(\n",
-    "        frequency=frequency,\n",
-    "        mic=-1,\n",
-    "        absorption=coeffs_median_glob[0],\n",
-    "        gains=coeffs_median_glob[2],\n",
-    "        offset=coeffs_median_glob[1],\n",
-    "        method=\"one-shot median\",\n",
-    "    )\n",
+    "    for d, series in df_here.groupby('distance').magnitude: \n",
+    "        ax_fit.scatter([d]*len(series), series.values, color='C0', s=4)#, s=5.0)\n",
+    "    ax_fit.scatter([], [], color='C0', label='raw', s=4)#, s=5.0)\n",
+    "\n",
+    "    ax_fit.plot(distances_median_all, slices_median[mic_idx, :], color='C0', label='distance slice')\n",
+    "    ax_fit.plot(distances_median, fit_median, color='C1', label='model fit')\n",
+    "\n",
+    "    ax_fit.set_title('fit for ' + label)\n",
+    "    ax_fit.set_ylabel('amplitude [-]')\n",
+    "    ax_fit.set_xlabel('distance [cm]')\n",
+    "    ax_fit.legend(loc='lower left')\n",
+    "    ax_fit.set_xlim(min(distances_median), max_distance)\n",
+    "\n",
+    "    ax_freq.semilogy(std_series.index, amps, ls=':', color=f'C0', label=f'magnitude')\n",
+    "    ax_freq.axhline(std_average, label=f'average std', color=f'C0')\n",
+    "    ax_freq.scatter(std_series.index, std_series.values, label=f'std', color=f'C0', s=4)\n",
+    "    ax_freq.set_xlim(min(distances_median), max_distance)\n",
+    "\n",
+    "    ax_freq.set_title('magnitude vs. noise for ' + label)\n",
+    "    ax_freq.legend(loc='lower left')\n",
+    "    ax_freq.set_xlabel('distance [cm]')\n",
+    "    #ax_freq.set_ylabel('magnitude vs. std [-]')\n",
+    "\n",
+    "    if (mic_idx, frequency) not in plot_tuples:\n",
+    "        continue\n",
     "        \n",
-    "    for i_mic, (mic, df_here) in enumerate(df_freq_here.groupby('mic')):\n",
-    "        mic_idx = int(mic)\n",
-    "        \n",
-    "        coeffs_raw, distances_raw, fit_raw, cost_raw =  data_collector.fit_to_raw(frequency, [mic_idx])\n",
-    "        coeffs_median, distances_median, fit_median, cost_median = data_collector.fit_to_median(frequency, [mic_idx])\n",
-    "        np.testing.assert_allclose(distances_raw, distances_median)\n",
-    "        alpha, offset, gain = coeffs_median\n",
-    "        alpha_raw, offset_raw, gain_raw = coeffs_raw\n",
-    "        \n",
-    "        # find the sigma for this frequency (per distance)\n",
-    "        std_series = df_here.groupby('distance').magnitude.std() # per distance\n",
-    "        std_average = np.nanmean(std_series.values)\n",
-    "        amps = get_amplitude_function(std_series.index, \n",
-    "                                      gain, \n",
-    "                                      alpha, mic_idx)\n",
-    "        valid_distances = std_series.index[amps >= std_average]\n",
-    "        limit_distance = valid_distances[-1] if len(valid_distances) else 0\n",
-    "        \n",
-    "        fitting_results.loc[len(fitting_results), :] = dict(\n",
-    "            frequency=frequency,\n",
-    "            mic=mic_idx,\n",
-    "            absorption=coeffs_median[0],\n",
-    "            gains=coeffs_median[2],\n",
-    "            offset=coeffs_median[1],\n",
-    "            method=\"median\",\n",
-    "        )\n",
-    "        fitting_results.loc[len(fitting_results), :] = dict(\n",
-    "            frequency=frequency,\n",
-    "            mic=mic_idx,\n",
-    "            absorption=coeffs_raw[0],\n",
-    "            gains=coeffs_raw[2],\n",
-    "            offset=coeffs_raw[1],\n",
-    "            method=\"raw\",\n",
-    "            limit_distance=limit_distance,\n",
-    "        )\n",
-    "        \n",
-    "        if (mic_idx, frequency) not in plot_tuples:\n",
-    "            continue\n",
-    "        print(f'raw: mic {mic}, frequency {frequency}')\n",
-    "        print(f'raw:    alpha={alpha_raw:.2f}, gain={gain_raw:.2f}, offset={offset_raw:.0f}, cost={cost_raw}')\n",
-    "        print(f'median: alpha={alpha:.2f}, gain={gain:.2f}, offset={offset:.0f}, cost={cost_median}')\n",
-    "            \n",
-    "            \n",
-    "        label = f\"{frequency:.0f}Hz\"\n",
-    "        fig, axs = plt.subplots(1, 2)\n",
-    "        fig.set_size_inches(10, 5)\n",
-    "        \n",
-    "        ax_fit, ax_freq = axs\n",
-    "        for d, series in df_here.groupby('distance').magnitude: \n",
-    "            ax_fit.scatter([d]*len(series), series.values, color='C0')#, s=5.0)\n",
-    "        ax_fit.scatter([], [], color='C0', label='raw')#, s=5.0)\n",
-    "        \n",
-    "        ax_fit.plot(distances_median_all, slices_median[i_mic], color='C0', label='median')\n",
-    "        ax_fit.plot(distances_raw, fit_raw, color='C2', ls='--', label='fit to raw')\n",
-    "        ax_fit.plot(distances_median, fit_median, color='C1', ls=':', label='fit to median')\n",
-    "        \n",
-    "        ax_fit.set_title('fit for ' + label)\n",
-    "        ax_fit.set_ylabel('amplitude [-]')\n",
-    "        ax_fit.set_xlabel('distance [cm]')\n",
-    "        ax_fit.legend(loc='lower left')\n",
-    "        \n",
-    "        #ax_freq.axhline(stds[i_mic], label=f'average std', color=f'C{i}')\n",
-    "        #ax_freq.semilogy(std_series.index, amps*0.5, ls=':', color=f'C{i}')\n",
-    "        ax_freq.semilogy(std_series.index, amps, ls=':', color=f'C{i}', label=f'amplitude')\n",
-    "        #ax_freq.semilogy(std_series.index, amps*1.5, ls=':', color=f'C{i}')\n",
-    "        ax_freq.axhline(std_average, label=f'average std', color=f'C{i}')\n",
-    "        ax_freq.scatter(std_series.index, std_series.values, label=f'std', color=f'C{i}')\n",
-    "        \n",
-    "        ax_freq.set_title('magnitude vs. noise for ' + label)\n",
-    "        ax_freq.legend(loc='lower left')\n",
-    "        ax_freq.set_xlabel('distance [cm]')\n",
-    "        #ax_freq.set_ylabel('magnitude vs. std [-]')\n",
-    "        \n",
-    "        fname_here = f'{plot_dir}/{fname}_fitting_{frequency:.0f}_{mic_idx}.png'\n",
-    "        save_fig(fig, fname_here)"
+    "    fname_here = f'{plot_dir}/{fname}_fitting_{frequency:.0f}_{mic_idx}.png'\n",
+    "    save_fig(fig, fname_here)"
    ]
   },
   {
