Generate latest plots

--- a/python/DynamicStudy.ipynb
+++ b/python/DynamicStudy.ipynb
@@ -674,8 +674,8 @@
     "source_distance = 1 # in meters\n",
     "freq_index, frequency_hz = get_frequency(frequency_desired)\n",
     "\n",
-    "#method = \"das\"; log = False\n",
-    "method = \"mvdr\"; log=True\n",
+    "method = \"das\"; log = False\n",
+    "#method = \"mvdr\"; log=True\n",
     "\n",
     "dir_name = \"plots_doa/simulation\"\n",
     "\n",
